[package]
name = "aleoscan-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.5.17"
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.25"
http = "0.2.8"
ipgeolocate = "0.3.5"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
reqwest = { version = "0.11.12", features = ["json"] }
savefile = "0.11.0"
savefile-derive = "0.11.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
